<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lexplore</string>
    <string name="action_settings">Settings</string>
    <string name="info_text1">Lexplore is a meta-dictionary.\nIt shows definitions and synonyms from</string>
    <string name="info_text2">Merriam-Webster\nUrban Dictionary\nWikisaurus</string>
    <string name="hint_text">type a word</string>
    <string name="app_version">v1.1</string>
    <string name="about_contact">by Stephen Greenfield\nstephengreenfield@gmail.com\n<a href='http://mindsoon.com'>www.mindsoon.com</a></string>
    <string name="about_info">Lexplore is a simple reference app. Type a word to get its dictionary definition, slang definition, and synonyms. Browse your search history with the back button or double-tap back to quit.</string>
    <string name="about_button">about</string>
    <string name="ok_button">OK</string>
    <string name="tap_back">Tap BACK again to quit</string>
    <string name="enable_internet">Please enable Internet access</string>
    <string name="server_timeout_response">It\'s taking a long time to reach the server. Please try again.</string>
    <string name="server_error_response">Something seems to be wrong with the server. Please try again.</string>
    <string name="app_error_response">Something seems to be wrong with the app. Please try again.</string>
    <string name="invalid_user_input_response">Sorry, it looks like your entry isn\'t valid. Please try again.</string>
    <string name="url">http://mindsoon.herokuapp.com/api/v1/lexplore/</string>
    <string name="italics_tag"><Data><![CDATA[<i>%s</i>]]></Data></string>
    <string name="line_tag"><Data><![CDATA[<small><br><br></small>]]></Data></string>
    <string name="small_tag"><Data><![CDATA[<font color=\'#999999\'><small>%s</small></font>]]></Data></string>
    <string name="no_results_tag"><Data><![CDATA[<font color=\'#999999\'>no %s results for </font>]]></Data></string>
    <string name="synonym_tag"><Data><![CDATA[<br><br>( </font><font color=\'#990000\'><a href=\'http://en.wiktionary.org/w/index.php?action=edit&title=%s\'>add synonyms</a></font><font color=\'#999999\'> )]]></Data></string>
    <string name="urban_dictionary_tag"><Data><![CDATA[<br><br>( </font><font color=\'#990000\'><a href=\'%s\'>add definition</a></font><font color=\'#999999\'> )]]></Data></string>
    <string name="web_link_tag"><Data><![CDATA[<br><br>( <font color=\'#990000\'><a href=\'%s\'>more</a></font> )]]></Data></string>




    <string name="mw_dictionary_api_url">www.dictionary.com</string>
    <string name="urban_dictionary_api_url">www.urbandictionary.com</string>
    <string name="thesaurus_api_url">www.thesaurus.com</string>
</resources>